@@ -3,6 +3,8 @@
 # include <gtkmm.h>
 # include <gtkmm/widget.h>
 # include <gtkmm/notebook.h>
+# include <pangomm/fontdescription.h>
+# include <pango/pango.h>
 
 # ifndef DISABLE_VTE
 # include <vte/vte.h>
@@ -509,6 +511,22 @@ namespace Astroid {
     gtk_container_add (GTK_CONTAINER(rev_terminal->gobj ()), vte_term);
     rev_terminal->show_all ();
 
+    /* load font settings */
+    ustring font_desc_string = astroid->config("terminal").get<string> ("font_description");
+
+    if (font_desc_string == "" || font_desc_string == "default") {
+      auto settings = Gio::Settings::create ("org.gnome.desktop.interface");
+      font_desc_string = settings->get_string ("monospace-font-name");
+    }
+
+    auto font_description = Pango::FontDescription (font_desc_string);
+
+    /* https://developer.gnome.org/pangomm/stable/classPango_1_1FontDescription.html#details */
+    if (font_description.get_size () == 0) {
+      LOG (warn) << "terminal.font_description: no size specified, expect weird behaviour.";
+    }
+
+    vte_terminal_set_font (VTE_TERMINAL(vte_term), font_description.gobj ());
     vte_terminal_set_size (VTE_TERMINAL (vte_term), 1, 10);
 
     /* start shell */
