@@ -1,3 +1,7 @@
+== **
+
+* `terminal.font_description` configures font of embedded terminal.
+
 == v0.11.1 / 2018-02-20
 
 * Automatically detect GMime version to build against.
